<resources>
    <string name="app_name">Contacts</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_contact">Edit Contact</string>

    <string name="your_contacts">Your Contacts</string>
    <string name="contact_image">Contact Image</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>

    <string name="msg_no_unsaved">Nothing to save!</string>
    <string name="msg_discard_without_save">Discarded contact changes!</string>
    <string name="msg_contact_deleted">Contact deleted!</string>
    <string name="msg_contact_saved">Contact saved!</string>
</resources>
