<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.herod.contacts.ContactActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/person_image_empty"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/contact_image" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contactEmailImageButton"
        android:src="@mipmap/ic_email"
        android:scaleType="fitEnd"
        android:layout_below="@+id/contactNameEditText"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView"
        android:contentDescription="@string/email" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contactTelImageButton"
        android:src="@mipmap/ic_call"
        android:scaleType="fitEnd"
        android:layout_below="@+id/contactEmailImageButton"
        android:layout_alignLeft="@+id/contactEmailImageButton"
        android:layout_alignStart="@+id/contactEmailImageButton"
        android:contentDescription="@string/phone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/contactNameEditText"
        android:layout_below="@+id/imageView"
        android:hint="@string/name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/contactEmailEditText"
        android:hint="@string/email"
        android:layout_above="@+id/contactTelEditText"
        android:layout_alignLeft="@+id/contactNameEditText"
        android:layout_alignStart="@+id/contactNameEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/contactTelEditText"
        android:hint="@string/phone_number"
        android:layout_alignTop="@+id/contactTelImageButton"
        android:layout_alignLeft="@+id/contactEmailEditText"
        android:layout_alignStart="@+id/contactEmailEditText" />

</RelativeLayout>
